--- a/index.html
+++ b/index.html
@@ -13,13 +13,16 @@
     <div class="container">
       <h1 id="pagetitle" class="text-center">RACHANA PODARALLA</h1>
       <div class="row">
-        <div class="col-lg-4 item">
+        <div class="col-lg-3 item">
           <img src="images/penguins-rachana.svg" class="img-fluid">
         </div>
-        <div class="col-lg-4 item">
+        <div class="col-lg-3 item">
+          <img src="images/elephant-rachana.svg" class="img-fluid">
+        </div>
+        <div class="col-lg-3 item">
           <img src="images/cat-rachana.svg" class="img-fluid">
         </div>
-        <div class="col-lg-4 item"> 
+        <div class="col-lg-3 item"> 
           <img src="images/giraffe-rachana.svg" class="img-fluid">  
         </div>
       </div>
